# retrieval-augmented-generation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
api/: README.md  __init__.py  config.py  main.py  models.py
api/routers/: __init__.py  admin.py  ingest.py  query.py
api/services/: __init__.py  ingestion.py  retrieval.py
src/: __init__.py
src/cache/: __init__.py  embedding_cache.py  query_cache.py  redis_manager.py
src/chains/: __init__.py  rag_chain.py
src/embeddings/: __init__.py  embedding_cache.py  embedding_model.py
src/loaders/: __init__.py  base_loader.py  directory_loader.py  docx_loader.py  excel_loader.py  pdf_loader.py  pptx_loader.py  text_loader.py
src/prompts/: __init__.py  prompt_template.py
src/retrievers/: __init__.py  base_retriever.py  vector_store_retriever.py
src/text_splitters/: __init__.py  base_text_splitter.py  character_text_splitter.py  recursive_character_text_splitter.py
src/utils/: __init__.py  document.py  similarity.py
src/vector_stores/: __init__.py  base_vector_store.py  in_memory_vector_store.py  redis_vector_store.py
